5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1752_1527.log
== TEST (2019-05-16 16:19:04) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = int(input('digite pf: '))
pl = int(input('digite pl: '))
while(qf>ql)(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    pf = int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:45) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = int(input('digite pf: '))
pl = int(input('digite pl: '))
while(qf>ql);(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- ERROR:
File "XXXX", line 6
    while(qf>ql);(qf>ql):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:52) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = int(input('digite pf: '))
pl = int(input('digite pl: '))
while(qf>ql)and(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    pf = int(input())
ValueError: invalid literal for int() with base 10: '1.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:22:38) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>ql)and(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:23) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>ql)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:47) 
-- CODE:
x = 1
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>ql)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:45) 
-- CODE:
x = 24
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>ql)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:07) 
-- CODE:
x = 24
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>ql)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- EXECUTION TIME:
0.159197
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:
24
-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:
24
-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:09) 
-- CODE:
x = 1
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>ql)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 2
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:12) 
-- CODE:
x = 1
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf<ql)and(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:37) 
-- CODE:
x = 1
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf<ql)and(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 12
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:46) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf<ql)and(qf>ql):
	qf = qf+(pf/100) * qf
	ql = ql+(pl/100) * ql
	x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:26) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf<ql)and(qf>ql):
	pf = pf*(qf/100) + pf
	pl = pl*(ql/100) + pl
	x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:15) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>pl)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:32) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>pl)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- EXECUTION TIME:
0.114402
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:
0
-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:
22302
-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:42) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf,pl)and(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:34:06) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf<pl)and(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:34:30) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>pl)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:34:49) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>pl)and(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:35:30) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>pl)and(qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:35:53) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>pl)and(qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:36:40) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>pl ; qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- ERROR:
File "XXXX", line 6
    while(qf>pl ; qf>ql):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:36:53) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>pl):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- ERROR:
File "XXXX", line 6
    while(qf>pl ; qf>ql):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:37:54) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:39:27) 
-- CODE:
x = 0
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:34) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
   x = x + 1
print(x)
-- ERROR:
File "XXXX", line 9
    x = x + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:46) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
   x = x + 1
print(x)
-- ERROR:
File "XXXX", line 9
    x = x + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:42:04) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
print(x)
-- ERROR:
File "XXXX", line 9
    x = x + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:42:41) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 24
while(qf>ql) and (qf>ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x +1
	print(x)
-- OUTPUT:
25
26
27
28
29
30
31
32
33
34
35
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:43:02) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 24
while(qf>ql) and (qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x +1
	print(x)
-- OUTPUT:
25
26
27
28
29
30
31
32
33
34
35
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:43:25) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x +1
print(x)
-- OUTPUT:
25
26
27
28
29
30
31
32
33
34
35
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:43:51) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (qf<ql):
	qf = qf*(pf/100) + qf
	ql = ql*(pl/100) + ql
	x = x += 1
print(x)
-- ERROR:
File "XXXX", line 9
    x = x += 1
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:45:41) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (qf<ql):
	qf = qf*(pf/100)+qf
	ql = ql*(pl/100)+ql
	x = x + 1
print(x)
-- ERROR:
File "XXXX", line 9
    x = x += 1
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:08) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 1
while(qf>ql) and (qf<ql):
	qf = qf*(pf/100)+qf
	ql = ql*(pl/100)+ql
	x = x + 0
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:19) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 1
while(qf>ql) or (pf<pl):
	qf = qf*(pf/100)+qf
	ql = ql*(pl/100)+ql
	x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:47:48) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 1
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)+qf
	ql = ql*(pl/100)+ql
	x = x + 1
print(x)
-- OUTPUT:
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:01) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)+qf
	ql = ql*(pl/100)+ql
	x = x + 1
print(x)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:18) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)+qf
	ql = ql*(pl/100)+ql
	x = x + 1
   print(x)
-- ERROR:
File "XXXX", line 10
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:40) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)
	ql = ql*(pl/100)
	x = x + 1
   print(x)
-- ERROR:
File "XXXX", line 10
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:49) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)
	ql = ql*(pl/100)
	x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:50:08) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
a = 1
b= 1
x = 0
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)
	ql = ql*(pl/100)
	x = x + 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:53:58) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 1
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)
	ql = ql*(pl/100)
	x = x + 1
print(x)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:54:18) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 24
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)
	ql = ql*(pl/100)
	x = x + 1
print(x)
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:54:30) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 24
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)
	ql = ql*(pl/100)
	x = x + 1
print(x)
-- EXECUTION TIME:
0.164841
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:
25
-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:
24
-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:
36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:26) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100)
	ql = ql*(pl/100)
	ql = ql = x
	x = x +1
print(x)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:28) 
-- CODE:
qf = int(input('digite qi: '))
ql = int(input('digite ql: '))
pf = float(input('digite pf: '))
pl = float(input('digite pl: '))
x = 0
while(qf>ql) and (pf<pl):
	qf = qf*(pf/100) + ql
	ql = ql*(pl/100) + ql
	pf = pf
	pl=pl
	x = x +1

print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
